--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -109,6 +109,10 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 
     </dependencies>
 
