--- a/order-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/order-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
   - include:
-      file: classpath:/db/changelog/changeset/create-order-table.yaml
+      file: classpath:/db/changelog/changeset/create-order-table.sql
