changed lifetime of JWT

--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -27,5 +27,5 @@ spring:
 security:
   jwt:
     secret_key: dXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3NfdXNhY2hldl9odWVzb3M=
-    access_token_expiration: 1800000 # 30 minutes
-    refresh_token_expiration: 604800000 # 7 days
+    access_token_expiration: 900000 #15 min
+    refresh_token_expiration: 3600000 #1 hour
