--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -15,12 +15,19 @@ spring:
     enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.yaml
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    bootstrap-servers: localhost:9092
+    schema-registry-url: http://localhost:8081
+    admin:
+      fail-fast: false
+      properties:
+        offsets.topic.replication.factor: 1
+        transaction.state.log.replication.factor: 1
+        transaction.state.log.min.isr: 1
+
+
 grpc:
   client:
     portfolio-service:
-      address: static://${PORTFOLIO_SERVICE_HOST:localhost}:${PORTFOLIO_SERVICE_PORT:6565}
+      address: static://localhost:6565
       enable-keep-alive: true
+      negotiation-type: plaintext
