--- a/portfolio-service/src/main/resources/application.yaml
+++ b/portfolio-service/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   application:
-    name: user-service
+    name: portfolio-service
   datasource:
     url: jdbc:postgresql://localhost:5432/user_service
     username: postgres
