--- a/portfolio-service/src/main/resources/application.yaml
+++ b/portfolio-service/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
+  port: 8083
 spring:
   application:
     name: portfolio-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/user_service
+    url: jdbc:postgresql://localhost:5432/portfolio_service
     username: postgres
     password: 123456
     driverClassName: org.postgresql.Driver
