--- a/portfolio-service/Dockerfile
+++ b/portfolio-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:17-jre-jammy
 WORKDIR /app
-COPY target/user-service-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8080
+COPY target/portfolio-service-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8083 6565
 ENTRYPOINT ["java", "-jar", "app.jar"]
