--- a/matching-engine/src/main/resources/application.yaml
+++ b/matching-engine/src/main/resources/application.yaml
@@ -1,3 +1,18 @@
 spring:
   application:
     name: matching-engine
+  kafka:
+    bootstrap-servers: localhost:9092
+    schema-registry-url: http://localhost:8081
+    admin:
+      fail-fast: false
+      properties:
+        offsets.topic.replication.factor: 1
+        transaction.state.log.replication.factor: 1
+        transaction.state.log.min.isr: 1
+  grpc:
+    client:
+      portfolio-service:
+        address: static://localhost:6565
+        enable-keep-alive: true
+        negotiation-type: plaintext
