--- a/matching-engine/pom.xml
+++ b/matching-engine/pom.xml
@@ -148,6 +148,7 @@
                         </goals>
                         <configuration>
                             <protocVersion>3.25.1</protocVersion>
+                            <includeStdTypes>true</includeStdTypes>
                             <inputDirectories>
                                 <include>src/main/proto</include>
                             </inputDirectories>
@@ -167,28 +168,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </path>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>1.6.3</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
