--- a/matching-engine/src/main/resources/application.yaml
+++ b/matching-engine/src/main/resources/application.yaml
@@ -10,6 +10,8 @@ spring:
         offsets.topic.replication.factor: 1
         transaction.state.log.replication.factor: 1
         transaction.state.log.min.isr: 1
+    topic:
+      deal-topic: deals
   grpc:
     client:
       portfolio-service:
