--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build and archive Docker images
         run: |
-          for service in user-service order-service portfolio-service; do
+          for service in user-service order-service portfolio-service matching-engine; do
             docker build -t $service:${{ github.sha }} -f $service/Dockerfile $service
             docker save $service:${{ github.sha }} | gzip > $service.tar.gz
           done
@@ -51,6 +51,7 @@ jobs:
             minikube image load user-service.tar.gz
             minikube image load order-service.tar.gz
             minikube image load portfolio-service.tar.gz
+            minikube image load matching-engine.tar.gz
 
             # Delete archives
             rm *.tar.gz
@@ -64,10 +65,14 @@ jobs:
             kubectl rollout status deployment/zookeeper-deployment --timeout=300s
             kubectl rollout status deployment/kafka-deployment --timeout=300s
             kubectl rollout status deployment/schema-registry-deployment --timeout=300s
-            
+
+            # Applying redis manifest
+            kubectl apply -f k8s/redis/
+            kubectl rollout status deployment/redis-deployment --timeout=300s
+
             # Applying secrets
             kubectl apply -f k8s/common/
-            
+
             #Applying services manifests
             kubectl apply -f k8s/services/
 
@@ -75,15 +80,17 @@ jobs:
             kubectl set image deployment/user-service-deployment user-service=user-service:${{ github.sha }}
             kubectl set image deployment/order-service-deployment order-service=order-service:${{ github.sha }}
             kubectl set image deployment/portfolio-service-deployment portfolio-service=portfolio-service:${{ github.sha }}
+            kubectl set image deployment/matching-engine-deployment matching-engine=matching-engine:${{ github.sha }}
 
             # Service rollouts
             kubectl rollout status deployment/user-service-deployment --timeout=300s
             kubectl rollout status deployment/order-service-deployment --timeout=300s
             kubectl rollout status deployment/portfolio-service-deployment --timeout=300s
+            kubectl rollout status deployment/matching-engine-deployment --timeout=300s
 
             # Apply ingress
             echo "Applying ingress..."
             kubectl apply -f k8s/ingress/
-            
+
             # Getting pods for checking
             kubectl get pods
