--- a/k8s/services/mathching-engine.yaml
+++ b/k8s/services/mathching-engine.yaml
@@ -15,6 +15,7 @@ kind: ConfigMap
 metadata:
   name: matching-engine-configmap
 data:
+  SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-service:5432/matching_engine
   SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka-service:9092
   SPRING_KAFKA_PROPERTIES_SCHEMA_REGISTRY_URL: http://schema-registry-service:8081
   SPRING_APPLICATION_NAME: matching-engine
@@ -43,5 +44,15 @@ spec:
                 name: matching-engine-configmap
             - secretRef:
                 name: jwt-secret
-
+          env:
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_USER
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
 
