--- a/security-lib/pom.xml
+++ b/security-lib/pom.xml
@@ -12,9 +12,7 @@
     <artifactId>security-lib</artifactId>
 
     <properties>
-
-        <jjwt.version>0.12.5</jjwt.version>
-
+        <jjwt.version>0.12.6</jjwt.version>
     </properties>
 
     <dependencies>
@@ -27,9 +25,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-
-        <!-- JJWT for JWT handling -->
-
+        <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
@@ -53,7 +49,6 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
-
     <distributionManagement>
         <repository>
             <id>github</id>
@@ -61,5 +56,4 @@
             <url>https://maven.pkg.github.com/ivakovv/Wolf-Street</url>
         </repository>
     </distributionManagement>
-
 </project>
