--- a/k8s/postgres/postgres-init-configmap.yaml
+++ b/k8s/postgres/postgres-init-configmap.yaml
@@ -7,4 +7,4 @@ data:
     CREATE DATABASE user_service;
     CREATE DATABASE order_service;
     CREATE DATABASE portfolio_service;
-    CREATE DATABASE matching_engine;
+    CREATE DATABASE instrument_service;
